--- a/src/views/book-moby-dick.html
+++ b/src/views/book-moby-dick.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles/main.scss">
-    <link rel="shortcut icon" href="../../favicon.png">
+    <link rel="shortcut icon" href="../assets/images/logo.svg">
     <title>Moby Dick (Herman Melville) - El Lector</title>
   </head>
 <body class="main">
   <nav class="navbar">
-    <a href="index.html" class="nav-logo">
-      <img src="../assets/images/logo.png" alt="Logo de El Lector" />
+    <a href="index.html" class="main-title">
+      <img class="main-title-logo" src="../assets/images/logo.svg" alt="Logo de El Lector" />
+      <h1 class="main-title-text">El Lector</h1>
     </a>
     <div class="navbar-color-selector">
       <div class="color-selector main"></div>
@@ -22,7 +23,7 @@
 
   <main>
     <div class="breadcrumb">
-      <a href="./index.html"><i class="fas fa-home"></i> Inicio</a>
+      <a href="./index.html"><span class="fas fa-home"></span> Inicio</a>
       <a href="./categories-juvenile.html">Juvenil</a>
       <a href="./book-moby-dick.html" class="active">Moby Dick</a>
     </div>
@@ -32,25 +33,29 @@
 
       <div class="technical-sheet">
         <h3>Ficha técnica</h3>
+
         <div class="book-cover-container">
-          <img src="../assets/images/books/moby-dick.jpg" alt="Portada del libro Moby Dick" class="book-cover" />
+          <picture class="book-cover">
+            <source media="(max-width: 767px)" srcset="../assets/images/books/moby-dick-cover-sm.jpg">
+            <source media="(max-width: 1199px)" srcset="../assets/images/books/moby-dick-cover-md.jpg">
+            <source media="(min-width: 1200px)" srcset="../assets/images/books/moby-dick-cover-lg.jpg">
+            <img src="../assets/images/books/moby-dick-cover-lg.jpg" alt="Portada del libro Moby Dick">
+          </picture>
         </div>
 
-        <ul>
-          <li>
-            <p>Datos de la obra</p>
-            <ul>
-              <li><span class="bold">Título</span>: Moby Dick</li>
-              <li><span class="bold">Autor</span>: Herman Melville</li>
-              <li><span class="bold">País</span>: Estados Unidos</li>
-              <li><span class="bold">Género</span>: Juvenil</li>
-              <li><span class="bold">Fecha de publicación</span>: <time datetime="1851-10-18">18 de octubre de 1851</time></li>
-            </ul>
-          </li>
-        </ul>
+        <div class="book-info">
+          <p>Datos de la obra</p>
+          <ul>
+            <li><span class="bold">Título</span>: Moby Dick</li>
+            <li><span class="bold">Autor</span>: Herman Melville</li>
+            <li><span class="bold">País</span>: Estados Unidos</li>
+            <li><span class="bold">Género</span>: Juvenil</li>
+            <li><span class="bold">Fecha de publicación</span>: <time datetime="1851-10-18">18 de octubre de 1851</time></li>
+          </ul>
+        </div>
       </div>
 
-      <div class="book-info">
+      <div class="book-summary">
         <section>
           <h3>Sobre la obra</h3>
           <p>"¡Comanda los cálices asesinos! ¡Bebed, arponeros! ¡Bebed y jurad, hombres, que el hombre de la proa de la ballena
@@ -61,7 +66,11 @@
           <p>Incapaz de enfrentar desastres naturales, malos augurios, incluso la muerte,
             Ahab impulsa su barco hacia "los peligros sin nombre de la ballena". Las cartas clave de Melville a Nathaniel
             Hawthorne están impresas al final de este volumen.</p>
-          
+          <div class="book-svg">
+            <object type="image/svg+xml" data="../assets/images/books/moby-dick_whale.svg">
+              <img src="../assets/images/books/moby-dick_whale.svg" alt="Imagen de una ballena con animación" />
+            </object>
+          </div>
         </section>
 
         <section class="author-info">
@@ -81,25 +90,38 @@
   </main>
 
   <footer class="footer">
-    <div class="footer-first-row">
+    <div class="footer-left">
+      <div class="footer-title">
+        <a href="index.html" class="main-title">
+          <img class="main-title-logo" src="../assets/images/logo.svg" alt="Logo de El Lector" />
+          <span class="main-title-text">El Lector</span>
+        </a>
+      </div>
       <div class="footer-links">
         <a href="">Sobre nosotros</a>
         <a href="">Aviso legal</a>
         <a href="">Política de privacidad</a>
       </div>
+    </div>
+    <div class="footer-center">
+      <img class="footer-image" src="../assets/images/library.jpg" alt="Imagen de una librería" />
+    </div>
+    <div class="footer-right">
+      <div class="footer-resources">
+        <p>Recursos externos</p>
+        <ul class="footer-resources-list">
+          <li><a href="https://www.freelogodesign.org/">Logo</a></li>
+          <li><a href="https://search.creativecommons.org/photos/04d57e3f-6d36-49f9-8e1e-7de9d72c202e">Imagen de librería (footer)</a></li>
+          <li><a href="https://openlibrary.org/works/OL102749W/Moby_Dick">Moby Dick</a></li>
+          <li><a href="http://difusionyextension.upnvirtual.edu.mx/index.php?option=com_content&view=article&id=475&catid=30&Itemid=420">Herman Melville</a></li>
+          <li><a href="https://freesvg.org/whale">Imagen de ballena</a></li>
+        </ul>
+      </div>
       <p class="footer-copy">
-        <i class="far fa-copyright"></i> 
+        <span class="far fa-copyright"></span> 
         <time datetime="2020">2020</time> 
         Borja Delgado Martín
       </p>
-    </div>
-    <div class="footer-second-row">
-      <p>Recursos externos</p>
-      <ul class="footer-resources">
-        <li><a href="https://www.freelogodesign.org/">Logo</a></li>
-        <li><a href="https://openlibrary.org/works/OL102749W/Moby_Dick">Moby Dick</a></li>
-        <li><a href="http://difusionyextension.upnvirtual.edu.mx/index.php?option=com_content&view=article&id=475&catid=30&Itemid=420">Herman Melville</a></li>
-      </ul>
     </div>
   </footer>
 
