--- a/src/views/index.html
+++ b/src/views/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles/main.scss">
-    <link rel="shortcut icon" href="../../favicon.png">
+    <link rel="shortcut icon" href="../assets/images/logo.svg">
     <title>Inicio - El Lector</title>
   </head>
   <body class="main">
     <nav class="navbar">
-      <a href="index.html" class="nav-logo">
-        <img src="../assets/images/logo.png" alt="Logo de El Lector" />
+      <a href="index.html" class="main-title">
+        <img class="main-title-logo" src="../assets/images/logo.svg" alt="Logo de El Lector" />
+        <h1 class="main-title-text">El Lector</h1>
       </a>
       <div class="navbar-color-selector">
         <div class="color-selector main"></div>
@@ -22,7 +23,7 @@
 
     <main>
       <div class="breadcrumb">
-        <a href="./index.html" class="active"><i class="fas fa-home"></i> Inicio</a>
+        <a href="./index.html" class="active"><span class="fas fa-home" aria-hidden="true"></span> Inicio</a>
       </div>
 
       <section class="index-text-section">
@@ -50,23 +51,35 @@
     </main>
 
     <footer class="footer">
-      <div class="footer-first-row">
+      <div class="footer-left">
+        <div class="footer-title">
+          <a href="index.html" class="main-title">
+            <img class="main-title-logo" src="../assets/images/logo.svg" alt="Logo de El Lector" />
+            <span class="main-title-text">El Lector</span>
+          </a>
+        </div>
         <div class="footer-links">
           <a href="">Sobre nosotros</a>
           <a href="">Aviso legal</a>
           <a href="">Política de privacidad</a>
         </div>
+      </div>
+      <div class="footer-center">
+        <img class="footer-image" src="../assets/images/library.jpg" alt="Imagen de una librería" />
+      </div>
+      <div class="footer-right">
+        <div class="footer-resources">
+          <p>Recursos externos</p>
+          <ul class="footer-resources-list">
+            <li><a href="https://www.freelogodesign.org/">Logo y categorías</a></li>
+            <li><a href="https://search.creativecommons.org/photos/04d57e3f-6d36-49f9-8e1e-7de9d72c202e">Imagen de librería (footer)</a></li>
+          </ul>
+        </div>
         <p class="footer-copy">
-          <i class="far fa-copyright"></i> 
+          <span class="far fa-copyright"></span> 
           <time datetime="2020">2020</time> 
           Borja Delgado Martín
         </p>
-      </div>
-      <div class="footer-second-row">
-        <p>Recursos externos</p>
-        <ul class="footer-resources">
-          <li><a href="https://www.freelogodesign.org/">Logo y categorías</a></li>
-        </ul>
       </div>
     </footer>
 
