--- a/src/assets/styles/views/common/_common.scss
+++ b/src/assets/styles/views/common/_common.scss
@@ -1,4 +1,5 @@
 @import '../../variables/variables';
+@import '../../variables/breakpoints';
 
 body {
   display: flex;
@@ -23,7 +24,7 @@ main {
   padding: 1rem 2rem 2rem;
 
   /*Versión de escritorio*/
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: $lg) {
     padding-right: 10%;
     padding-left: 10%;
   }
