--- a/src/views/book-alice.html
+++ b/src/views/book-alice.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="viewport" content="width=device-width, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/styles/main.scss">
-    <link rel="shortcut icon" href="../../favicon.png">
+    <link rel="shortcut icon" href="../assets/images/logo.svg">
     <title>Alicia en el País de las Maravillas (Lewis Carrol) - El Lector</title>
   </head>
 <body class="main">
   <nav class="navbar">
-    <a href="index.html" class="nav-logo">
-      <img src="../assets/images/logo.png" alt="Logo de El Lector" />
+    <a href="index.html" class="main-title">
+      <img class="main-title-logo" src="../assets/images/logo.svg" alt="Logo de El Lector" />
+      <h1 class="main-title-text">El Lector</h1>
     </a>
     <div class="navbar-color-selector">
       <div class="color-selector main"></div>
@@ -22,7 +23,7 @@
 
   <main>
     <div class="breadcrumb">
-      <a href="./index.html"><i class="fas fa-home"></i> Inicio</a>
+      <a href="./index.html"><span class="fas fa-home"></span> Inicio</a>
       <a href="./categories-juvenile.html">Juvenil</a>
       <a href="./book-alice.html" class="active">Alicia en el País de las Maravillas</a>
     </div>
@@ -32,25 +33,29 @@
 
       <div class="technical-sheet">
         <h3>Ficha técnica</h3>
+
         <div class="book-cover-container">
-          <img src="../assets/images/books/alice.jpg" alt="Portada del libro Alicia en el País de las Maravillas" class="book-cover" />
+          <picture class="book-cover">
+            <source media="(max-width: 767px)" srcset="../assets/images/books/alice-cover-sm.jpg">
+            <source media="(max-width: 1199px)" srcset="../assets/images/books/alice-cover-md.jpg">
+            <source media="(min-width: 1200px)" srcset="../assets/images/books/alice-cover-lg.jpg">
+            <img src="../assets/images/books/alice-cover-lg.jpg" alt="Portada del libro Alicia en el País de las Maravillas">
+          </picture>
         </div>
 
-        <ul>
-          <li>
-            <p>Datos de la obra</p>
-            <ul>
-              <li><span class="bold">Título</span>: Alicia en el País de las Maravillas</li>
-              <li><span class="bold">Autor</span>: Lewis Carroll</li>
-              <li><span class="bold">País</span>: Reino Unido</li>
-              <li><span class="bold">Género</span>: Juvenil</li>
-              <li><span class="bold">Fecha de publicación</span>: <time datetime="1865-11-26">26 de noviembre de 1865</time></li>
-            </ul>
-          </li>
-        </ul>
+        <div class="book-info">
+          <p>Datos de la obra</p>
+          <ul>
+            <li><span class="bold">Título</span>: Alicia en el País de las Maravillas</li>
+            <li><span class="bold">Autor</span>: Lewis Carroll</li>
+            <li><span class="bold">País</span>: Reino Unido</li>
+            <li><span class="bold">Género</span>: Juvenil</li>
+            <li><span class="bold">Fecha de publicación</span>: <time datetime="1865-11-26">26 de noviembre de 1865</time></li>
+          </ul>
+        </div>
       </div>
 
-      <div class="book-info">
+      <div class="book-summary">
         <section>
           <h3>Sobre la obra</h3>
           <p>Uno de los libros más populares y citados en inglés, Alice's Adventures in Wonderland. Escrito para los jóvenes
@@ -61,6 +66,11 @@
             con un elenco de extraños personajes y bestias extravagantes, incluyendo el Conejo Blanco, la Liebre de Marzo y
             el Sombrerero Loco, el dormido Lirón y el sonriente Gato de Cheshire, la Falsa Tortuga, la espantosa Reina de
             Corazones y criaturas inusuales.</p>
+          <div class="book-svg">
+              <object type="image/svg+xml" data="../assets/images/books/alice_rabbit.svg">
+                <img src="../assets/images/books/alice_rabbit.svg" alt="Imagen de un conejo con animación" />
+              </object>
+          </div>
         </section>
 
         <section class="author-info">
@@ -77,25 +87,38 @@
   </main>
 
   <footer class="footer">
-    <div class="footer-first-row">
+    <div class="footer-left">
+      <div class="footer-title">
+        <a href="index.html" class="main-title">
+          <img class="main-title-logo" src="../assets/images/logo.svg" alt="Logo de El Lector" />
+          <span class="main-title-text">El Lector</span>
+        </a>
+      </div>
       <div class="footer-links">
         <a href="">Sobre nosotros</a>
         <a href="">Aviso legal</a>
         <a href="">Política de privacidad</a>
       </div>
+    </div>
+    <div class="footer-center">
+      <img class="footer-image" src="../assets/images/library.jpg" alt="Imagen de una librería" />
+    </div>
+    <div class="footer-right">
+      <div class="footer-resources">
+        <p>Recursos externos</p>
+        <ul class="footer-resources-list">
+          <li><a href="https://www.freelogodesign.org/">Logo</a></li>
+          <li><a href="https://search.creativecommons.org/photos/04d57e3f-6d36-49f9-8e1e-7de9d72c202e">Imagen de librería (footer)</a></li>
+          <li><a href="https://openlibrary.org/books/OL24371078M/Alice's_Adventures_in_Wonderland">Alicia en el País de las Maravillas</a></li>
+          <li><a href="https://es.wikipedia.org/wiki/Lewis_Carroll">Lewis Carroll</a></li>
+          <li><a href="https://freesvg.org/silhouette-vector-illustration-of-rabbit">Imagen de conejo</a></li>
+        </ul>
+      </div>
       <p class="footer-copy">
-        <i class="far fa-copyright"></i> 
+        <span class="far fa-copyright"></span> 
         <time datetime="2020">2020</time> 
         Borja Delgado Martín
       </p>
-    </div>
-    <div class="footer-second-row">
-      <p>Recursos externos</p>
-      <ul class="footer-resources">
-        <li><a href="https://www.freelogodesign.org/">Logo</a></li>
-        <li><a href="https://openlibrary.org/works/OL13101191W/Alice_in_Wonderland!">Alicia en el País de las Maravillas</a></li>
-        <li><a href="https://es.wikipedia.org/wiki/Lewis_Carroll">Lewis Carroll</a></li>
-      </ul>
     </div>
   </footer>
 
